--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,5 +1,11 @@
-.login-form {
+.login__form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+a {
+  margin-top: 20px;
+  display: block;
+  text-align: center;
 }
