--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,7 @@
   border-radius: 10000px;
   text-align: center;
   animation: goAway 0.5s ease-in-out forwards;
-  animation-delay: 5s;
+  animation-delay: 2s;
 }
 
 .message.error {
@@ -31,6 +31,11 @@
 .message.success {
   background-color: rgb(21, 86, 207);
   color: white;
+}
+
+body {
+  margin-left: 5%;
+  margin-top: 200px;
 }
 
 header {
