--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,15 @@
-.login__form {
+.login__div {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.login__form {
+  margin-top: 20px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
