--- a/static/css/post.css
+++ b/static/css/post.css
@@ -6,6 +6,7 @@
 .post__set {
   margin-top: 50px;
   margin-left: 100px;
+  margin-bottom: 300px;
   width: var(--board-width);
 }
 
@@ -38,6 +39,12 @@
 }
 
 .post__delete {
+  cursor: pointer;
   position: absolute;
   right: 10px;
+}
+
+.post__update {
+  position: absolute;
+  right: 80px;
 }
